docs: generate comments for swagger
